# alacritty-themes

./: .env_sample  README.md  alacritty.py  alacritty.yml  bakp.p  pyproject.toml  yml2toml.py
themes/toml/: 3024.toml  Ashes.toml  Astromouse.toml  Atelierdune.toml  Atelierforest.toml  Atelierheath.toml  Atelierlakeside.toml  Atelierseaside.toml  Baskerville - Count Von Count.toml  Baskerville - Eldorado dark.toml  Baskerville - FarSide.toml  Baskerville - ivory dark.toml  Baskerville - lost woods.toml  Baskerville-ivorylight.toml  Belge.toml  Bespin.toml  Bitmute.toml  Bleh-1.toml  Brewer.toml  Chalk.toml  Cloud.toml  Codeschool.toml  Colorfulcolors.toml  DOOMICIDE darkocean.toml  Dawn.toml  Deafened.toml  Default.toml  Derp.toml  Digerati.toml  Dkeg - canvasedpastel.toml  Dkeg - catchmeifyoucan.toml  Dkeg - citystreets.toml  Dkeg - colorstar.toml  Dkeg - panels.toml  Dkeg - redphoenix.toml  Dkeg - teva.toml  Dkeg - unsiftedwheat.toml  Dkeg - vwbug.toml  Dotshare.toml  Dwmrob.toml  (+90 more)
